# Python_from_zero_to_hero

./: .gitignore  100_python_lekci.md  404.html  CLAUDE.md  PROMPT.md  README.md  RESUME.md  gen_programy.py  index.html  mkdocs.yml  start.ps1  start.sh
01_instalace_venv_pip/: index.html
02_repl_skripty/: index.html
03_promenne_typovani/: index.html
04_zakladni_typy/: index.html
05_retezce_fstringy/: index.html
06_operatory/: index.html
07_vstup_vystup/: index.html
08_podminky/: index.html
09_smycky/: index.html
100_ai_llm/: index.html
101_solid/: index.html
102_navrhove_vzory/: index.html
103_clean_architecture/: index.html
104_ddd/: index.html
105_cqrs_event_sourcing/: index.html
106_api_design/: index.html
107_retry_circuit_breaker/: index.html
108_konzistence_dat/: index.html
109_validace_kontrakty/: index.html
10_komentare_pep8_typing/: index.html
110_refactoring_legacy/: index.html
111_12factor/: index.html
112_observabilita/: index.html
113_konfigurace_produkce/: index.html
114_docker/: index.html
115_kubernetes/: index.html
116_cicd/: index.html
117_bezpecnost/: index.html
118_releasing/: index.html
119_performance_engineering/: index.html
programy/l91_ruff_config/: index.html  pyproject.toml
projekty/08_pypi_balicek/: README.md  pyproject.toml
projekty/08_pypi_balicek/src/pozdrav_cli/: __init__.py  cli.py
projekty/11_otestovana_knihovna/: README.md  pyproject.toml
projekty/11_otestovana_knihovna/src/cas_nastroje/: __init__.py  casy.py
projekty/11_otestovana_knihovna/tests/: test_casy.py
(+953 files in other folders)
