[project]
name = "cas-nastroje"
version = "0.1.0"
description = "Užitečné funkce pro práci s časem"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
files = ["src"]
